fix: latest posts wrong background color in dark mode

--- a/src/scss/kratosr.scss
+++ b/src/scss/kratosr.scss
@@ -2112,6 +2112,7 @@ ul.kratos-post-meta {
           margin-bottom: 0;
           padding: 8px 0;
           border: 0;
+          background-color: unset;
       
           &:first-child {
             margin-top: 1px;
